Refresh package building, add documentation, use GitHub actions (#2)
Refresh package building, add documentation, use GitHub actions.

--- a/glite-BDII_top/Makefile
+++ b/glite-BDII_top/Makefile
@@ -1,22 +1,27 @@
-NAME= $(shell grep Name: *.spec | sed 's/^[^:]*:[^a-zA-Z]*//' )
-VERSION= $(shell grep Version: *.spec | sed 's/^[^:]*:[^0-9]*//' )
-RELEASE= $(shell grep Release: *.spec |cut -d"%" -f1 |sed 's/^[^:]*:[^0-9]*//')
+NAME=$(shell grep Name: *.spec | sed 's/^[^:]*:[^a-zA-Z]*//')
+VERSION=$(shell grep Version: *.spec | sed 's/^[^:]*:[^0-9]*//')
+RELEASE=$(shell grep Release: *.spec | cut -d"%" -f1 | sed 's/^[^:]*:[^0-9]*//')
 build=$(shell pwd)/build
 DATE=$(shell date "+%a, %d %b %Y %T %z")
+dist=$(shell rpm --eval '%dist')
 
-default: 
+default:
 	@echo "Nothing to do"
 
 install:
 	@echo installing ...
-	@mkdir -p $(prefix)/opt/glite/release/glite-BDII_top
-
-	@install -m 0644 LICENCE	$(prefix)/opt/glite/release/glite-BDII_top/
-	@install -m 0644 glite-version	$(prefix)/opt/glite/release/glite-BDII_top/
+	@mkdir -p $(prefix)/opt/glite/release/$(NAME)-$(VERSION)
+	@mkdir -p $(prefix)/usr/share/doc/$(NAME)-$(VERSION)
+	@mkdir -p $(prefix)/usr/share/licenses/$(NAME)-$(VERSION)
+	@install -m 0644 AUTHORS.md $(prefix)/usr/share/doc/$(NAME)-$(VERSION)/
+	@install -m 0644 COPYRIGHT $(prefix)/usr/share/licenses/$(NAME)-$(VERSION)/
+	@install -m 0644 LICENSE.txt $(prefix)/usr/share/licenses/$(NAME)-$(VERSION)/
+	@install -m 0644 glite-version $(prefix)/opt/glite/release/$(NAME)-$(VERSION)/
 
 dist:
-	@mkdir -p  $(build)/$(NAME)-$(VERSION)/
-	rsync -HaS --exclude ".svn" --exclude "$(build)" * $(build)/$(NAME)-$(VERSION)/
+	@mkdir -p $(build)/$(NAME)-$(VERSION)/
+	rsync -HaS --exclude ".git" --exclude "$(build)" * $(build)/$(NAME)-$(VERSION)/
+	cp ../LICENSE.txt ../COPYRIGHT ../AUTHORS.md $(build)/$(NAME)-$(VERSION)/
 	cd $(build); tar --gzip -cf $(NAME)-$(VERSION).tar.gz $(NAME)-$(VERSION)/; cd -
 
 sources: dist
@@ -26,21 +31,22 @@ deb: dist
 	cd $(build)/$(NAME)-$(VERSION); dpkg-buildpackage -us -uc; cd -
 
 prepare: dist
-	@mkdir -p  $(build)/RPMS/noarch
-	@mkdir -p  $(build)/SRPMS/
-	@mkdir -p  $(build)/SPECS/
-	@mkdir -p  $(build)/SOURCES/
-	@mkdir -p  $(build)/BUILD/
-	cp $(build)/$(NAME)-$(VERSION).tar.gz $(build)/SOURCES 
+	@mkdir -p $(build)/RPMS/noarch
+	@mkdir -p $(build)/SRPMS/
+	@mkdir -p $(build)/SPECS/
+	@mkdir -p $(build)/SOURCES/
+	@mkdir -p $(build)/BUILD/
+	cp $(build)/$(NAME)-$(VERSION).tar.gz $(build)/SOURCES
+	cp $(NAME).spec $(build)/SPECS
 
 srpm: prepare
-	@rpmbuild -bs --define='_topdir ${build}' $(NAME).spec
+	rpmbuild -bs --define="dist ${dist}" --define='_topdir ${build}' $(build)/SPECS/$(NAME).spec
 
 rpm: srpm
-	@rpmbuild --rebuild  --define='_topdir ${build} ' $(build)/SRPMS/$(NAME)-$(VERSION)-$(RELEASE).src.rpm
+	rpmbuild --rebuild --define="dist ${dist}" --define='_topdir ${build}' $(build)/SRPMS/$(NAME)-$(VERSION)-$(RELEASE)$(dist).src.rpm
 
 clean:
 	rm -f *~ $(NAME)-$(VERSION).tar.gz
 	rm -rf $(build)
 
-.PHONY: dist srpm rpm sources clean 
+.PHONY: dist srpm rpm sources clean
