--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,7 @@ jobs:
           name: rpms7-${{ matrix.rpm-name }}
       - name: Install generated RPMs
         run: |
+          yum install -y http://repository.egi.eu/sw/production/umd/4/centos7/x86_64/updates/umd-release-4.1.3-1.el7.centos.noarch.rpm
           yum localinstall -y ${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
   # Dependency from PowerTools: openldap-servers
