--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
   # XXX done outside of the build matrix due to different container name
   build-centos7:
     strategy:
+      fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
     name: Build ${{ matrix.rpm-name }} CentOS 7 RPMs
@@ -37,6 +38,7 @@ jobs:
   # Use a matrix for CentOS Stream versions
   build:
     strategy:
+      fail-fast: false
       matrix:
         centos-version: [8, 9]
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
@@ -66,6 +68,7 @@ jobs:
 
   install-centos7:
     strategy:
+      fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
     name: Install ${{ matrix.rpm-name }} CentOS 7 RPMs
@@ -84,6 +87,7 @@ jobs:
   # Dependency from PowerTools: openldap-servers
   centos8-install:
     strategy:
+      fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
     name: Install ${{ matrix.rpm-name }} CentOS Stream 8 RPMs
@@ -102,6 +106,7 @@ jobs:
   # XXX Dependencies from EPEL: openldap-servers
   centos9-install:
     strategy:
+      fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
     name: Install ${{ matrix.rpm-name }} CentOS Stream 9 RPMs
