--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,8 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MARKDOWN_CONFIG_FILE: .markdownlint.json
+          # No need to check for duplication in the meta-packages
+          VALIDATE_JSCPD: false
           # Only check new or edited files
           VALIDATE_ALL_CODEBASE: false
           # Fail on errors
