--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,16 +35,16 @@ jobs:
           path: |
             ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
-  # Use a matrix for CentOS Stream versions
+  # Use a matrix for AlmaLinux versions
   build:
     strategy:
       fail-fast: false
       matrix:
-        centos-version: [8, 9]
+        almalinux-version: [8, 9]
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Build ${{ matrix.rpm-name }} CentOS ${{ matrix.centos-version }} RPMs
+    name: Build ${{ matrix.rpm-name }} AlmaLinux ${{ matrix.almalinux-version }} RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream${{ matrix.centos-version }}
+    container: almalinux:${{ matrix.almalinux-version }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -58,13 +58,13 @@ jobs:
         run: |
           cd ${{ matrix.rpm-name }}
           make clean rpm
-          rpmlint --file .rpmlint.ini build/RPMS/noarch/*.el${{ matrix.centos-version }}.noarch.rpm
+          rpmlint --file .rpmlint.ini build/RPMS/noarch/*.el${{ matrix.almalinux-version }}.noarch.rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms${{ matrix.centos-version }}-${{ matrix.rpm-name }}
+          name: rpms${{ matrix.almalinux-version }}-${{ matrix.rpm-name }}
           path: |
-            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*.el${{ matrix.centos-version }}.noarch.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*.el${{ matrix.almalinux-version }}.noarch.rpm
 
   install-centos7:
     strategy:
@@ -85,34 +85,34 @@ jobs:
           yum localinstall -y ${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
   # Dependency from PowerTools: openldap-servers
-  centos8-install:
+  almalinux8-install:
     strategy:
       fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Install ${{ matrix.rpm-name }} CentOS Stream 8 RPMs
+    name: Install ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     needs: build
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream8
+    container: almalinux:8
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms8-${{ matrix.rpm-name }}
       - name: Install generated RPMs
         run: |
-          sed -i 's/^enabled=0/enabled=1/' /etc/yum.repos.d/CentOS-Stream-PowerTools.repo
+          sed -i 's/^enabled=0/enabled=1/' /etc/yum.repos.d/almalinux-powertools.repo
           yum localinstall -y ${{ matrix.rpm-name }}-*.el8.noarch.rpm
 
   # XXX Dependencies from EPEL: openldap-servers
-  centos9-install:
+  almalinux9-install:
     strategy:
       fail-fast: false
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Install ${{ matrix.rpm-name }} CentOS Stream 9 RPMs
+    name: Install ${{ matrix.rpm-name }} AlmaLinux 9 RPMs
     needs: build
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream9
+    container: almalinux:9
     steps:
       - uses: actions/download-artifact@v3
         with:
