--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,13 +37,13 @@ jobs:
             build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el7.noarch.rpm
             build/SRPMS/${{ matrix.rpm-name }}-*-1.el7.src.rpm
 
-  centos8:
+  almalinux8:
     strategy:
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Build ${{ matrix.rpm-name }} CentOS Stream 8 RPMs
+    name: Build ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream8
+    container: almalinux:8
     steps:
       - uses: actions/checkout@v3
         with:
@@ -64,13 +64,13 @@ jobs:
             build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el8.noarch.rpm
             build/SRPMS/${{ matrix.rpm-name }}-*-1.el8.src.rpm
 
-  centos9:
+  almalinux9:
     strategy:
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Build CentOS Stream 9 RPMs
+    name: Build AlmaLinux 9 RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream9
+    container: almalinux:9
     steps:
       - uses: actions/checkout@v3
         with:
@@ -123,54 +123,54 @@ jobs:
     strategy:
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
-    name: Upload ${{ matrix.rpm-name }} CentOS Stream 8 release artefacts
-    needs: centos8
+    name: Upload ${{ matrix.rpm-name }} AlmaLinux 8 release artefacts
+    needs: almalinux8
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms8-${{ matrix.rpm-name }}
       - name: Find package name
-        id: package_name_centos8
+        id: package_name_almalinux8
         run: |
           rpm_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el8.noarch.rpm')
           src_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el8.src.rpm')
           echo "rpm_path=${rpm_path}" >> "$GITHUB_OUTPUT"
           echo "src_path=${src_path}" >> "$GITHUB_OUTPUT"
-      - name: Attach CentOS Stream 8 RPMs to the release
+      - name: Attach AlmaLinux 8 RPMs to the release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.package_name_centos8.outputs.rpm_path }}
-            ${{ steps.package_name_centos8.outputs.src_path }}
+            ${{ steps.package_name_almalinux8.outputs.rpm_path }}
+            ${{ steps.package_name_almalinux8.outputs.src_path }}
 
   release9:
     strategy:
       matrix:
         rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS Stream 9 release artefacts
-    needs: centos9
+    needs: almalinux9
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms9-${{ matrix.rpm-name }}
       - name: Find package name
-        id: package_name_centos9
+        id: package_name_almalinux9
         run: |
           rpm_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el9.noarch.rpm')
           src_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el9.src.rpm')
           echo "rpm_path=${rpm_path}" >> "$GITHUB_OUTPUT"
           echo "src_path=${src_path}" >> "$GITHUB_OUTPUT"
-      - name: Attach CentOS Stream 9 RPMs to the release
+      - name: Attach AlmaLinux 9 RPMs to the release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.package_name_centos9.outputs.rpm_path }}
-            ${{ steps.package_name_centos9.outputs.src_path }}
+            ${{ steps.package_name_almalinux9.outputs.rpm_path }}
+            ${{ steps.package_name_almalinux9.outputs.src_path }}
