--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,11 @@ jobs:
           yum install -y http://repository.egi.eu/sw/production/umd/4/centos7/x86_64/updates/umd-release-4.1.3-1.el7.centos.noarch.rpm
           yum localinstall -y ${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
-  # Dependency from PowerTools: openldap-servers
+  # FIXME: openldap-servers is in CentOS 8 Stream Powertools, but not in AlmaLinux PowerTools
+  # See https://bugs.almalinux.org/view.php?id=222
+  # Currently instaling using the package from devel repository
+  # See https://bugs.almalinux.org/view.php?id=100
+  # https://repo.almalinux.org/almalinux/8/devel/x86_64/os/Packages/
   almalinux8-install:
     strategy:
       fail-fast: false
@@ -100,7 +104,7 @@ jobs:
           name: rpms8-${{ matrix.rpm-name }}
       - name: Install generated RPMs
         run: |
-          sed -i 's/^enabled=0/enabled=1/' /etc/yum.repos.d/almalinux-powertools.repo
+          yum install -y https://repo.almalinux.org/almalinux/8/devel/x86_64/os/Packages/openldap-servers-2.4.46-18.el8.x86_64.rpm
           yum localinstall -y ${{ matrix.rpm-name }}-*.el8.noarch.rpm
 
   # XXX Dependencies from EPEL: openldap-servers
