--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,9 @@ jobs:
   # XXX done outside of the build matrix due to different container name
   build-centos7:
     strategy:
+      fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} CentOS 7 RPMs
     runs-on: ubuntu-latest
     container: quay.io/centos/centos:7
@@ -24,24 +25,26 @@ jobs:
           yum-builddep -y ${{ matrix.rpm-name }}.spec
       - name: build rpm
         run: |
+          cd ${{ matrix.rpm-name }}
           make clean rpm
           rpmlint --file .rpmlint.ini build/RPMS/noarch/*.el7.noarch.rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms7
+          name: rpms7-${{ matrix.rpm-name }}
           path: |
-            build/RPMS/noarch/${{ matrix.rpm-name }}-*.el7.noarch.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
-  # Use a matrix for CentOS Stream versions
+  # Use a matrix for AlmaLinux versions
   build:
     strategy:
+      fail-fast: false
       matrix:
-        centos-version: [8, 9]
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
-    name: Build CentOS ${{ matrix.rpm-name }} ${{ matrix.centos-version }} RPMs
+        almalinux-version: [8, 9]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Build ${{ matrix.rpm-name }} AlmaLinux ${{ matrix.almalinux-version }} RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream${{ matrix.centos-version }}
+    container: almalinux:${{ matrix.almalinux-version }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -53,19 +56,21 @@ jobs:
           yum-builddep -y ${{ matrix.rpm-name }}.spec
       - name: build rpm
         run: |
+          cd ${{ matrix.rpm-name }}
           make clean rpm
-          rpmlint --file .rpmlint.ini build/RPMS/noarch/*.el${{ matrix.centos-version }}.noarch.rpm
+          rpmlint --file .rpmlint.ini build/RPMS/noarch/*.el${{ matrix.almalinux-version }}.noarch.rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms${{ matrix.centos-version }}-${{ matrix.rpm-name }}
+          name: rpms${{ matrix.almalinux-version }}-${{ matrix.rpm-name }}
           path: |
-            build/RPMS/noarch/${{ matrix.rpm-name }}-*.el${{ matrix.centos-version }}.noarch.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*.el${{ matrix.almalinux-version }}.noarch.rpm
 
   install-centos7:
     strategy:
+      fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Install ${{ matrix.rpm-name }} CentOS 7 RPMs
     needs: build-centos7
     runs-on: ubuntu-latest
@@ -76,35 +81,42 @@ jobs:
           name: rpms7-${{ matrix.rpm-name }}
       - name: Install generated RPMs
         run: |
-          yum localinstall -y  ${{ matrix.rpm-name }}-*.el7.noarch.rpm
+          yum install -y http://repository.egi.eu/sw/production/umd/4/centos7/x86_64/updates/umd-release-4.1.3-1.el7.centos.noarch.rpm
+          yum localinstall -y ${{ matrix.rpm-name }}-*.el7.noarch.rpm
 
-  # Dependency from PowerTools: openldap-servers
-  centos8-install:
+  # FIXME: openldap-servers is in CentOS 8 Stream Powertools, but not in AlmaLinux PowerTools
+  # See https://bugs.almalinux.org/view.php?id=222
+  # Currently instaling using the package from devel repository
+  # See https://bugs.almalinux.org/view.php?id=100
+  # https://repo.almalinux.org/almalinux/8/devel/x86_64/os/Packages/
+  almalinux8-install:
     strategy:
+      fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
-    name: Install ${{ matrix.rpm-name }} CentOS Stream 8 RPMs
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Install ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     needs: build
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream8
+    container: almalinux:8
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms8-${{ matrix.rpm-name }}
       - name: Install generated RPMs
         run: |
-          sed -i 's/^enabled=0/enabled=1/' /etc/yum.repos.d/CentOS-Stream-PowerTools.repo
+          yum install -y https://repo.almalinux.org/almalinux/8/devel/x86_64/os/Packages/openldap-servers-2.4.46-18.el8.x86_64.rpm
           yum localinstall -y ${{ matrix.rpm-name }}-*.el8.noarch.rpm
 
   # XXX Dependencies from EPEL: openldap-servers
-  centos9-install:
+  almalinux9-install:
     strategy:
+      fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
-    name: Install ${{ matrix.rpm-name }} CentOS Stream 9 RPMs
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Install ${{ matrix.rpm-name }} AlmaLinux 9 RPMs
     needs: build
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream9
+    container: almalinux:9
     steps:
       - uses: actions/download-artifact@v3
         with:
