--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
   centos7:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} CentOS 7 RPMs
     runs-on: ubuntu-latest
     container: quay.io/centos/centos:7
@@ -32,18 +32,18 @@ jobs:
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms7
+          name: rpms7-${{ matrix.rpm-name }}
           path: |
             build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el7.noarch.rpm
             build/SRPMS/${{ matrix.rpm-name }}-*-1.el7.src.rpm
 
-  centos8:
+  almalinux8:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
-    name: Build ${{ matrix.rpm-name }} CentOS Stream 8 RPMs
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Build ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream8
+    container: almalinux:8
     steps:
       - uses: actions/checkout@v3
         with:
@@ -59,15 +59,18 @@ jobs:
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms8
+          name: rpms8-${{ matrix.rpm-name }}
           path: |
             build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el8.noarch.rpm
             build/SRPMS/${{ matrix.rpm-name }}-*-1.el8.src.rpm
 
-  centos9:
-    name: Build CentOS Stream 9 RPMs
+  almalinux9:
+    strategy:
+      matrix:
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Build AlmaLinux 9 RPMs
     runs-on: ubuntu-latest
-    container: quay.io/centos/centos:stream9
+    container: almalinux:9
     steps:
       - uses: actions/checkout@v3
         with:
@@ -83,7 +86,7 @@ jobs:
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
         with:
-          name: rpms9
+          name: rpms9-${{ matrix.rpm-name }}
           path: |
             build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el9.noarch.rpm
             build/SRPMS/${{ matrix.rpm-name }}-*-1.el9.src.rpm
@@ -91,9 +94,9 @@ jobs:
   release7:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS 7 release artefacts
-    needs: centos7-${{ matrix.rpm-name }}
+    needs: centos7
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
@@ -119,55 +122,55 @@ jobs:
   release8:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
-    name: Upload ${{ matrix.rpm-name }} CentOS Stream 8 release artefacts
-    needs: centos8-${{ matrix.rpm-name }}
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+    name: Upload ${{ matrix.rpm-name }} AlmaLinux 8 release artefacts
+    needs: almalinux8
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms8-${{ matrix.rpm-name }}
       - name: Find package name
-        id: package_name_centos8
+        id: package_name_almalinux8
         run: |
           rpm_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el8.noarch.rpm')
           src_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el8.src.rpm')
           echo "rpm_path=${rpm_path}" >> "$GITHUB_OUTPUT"
           echo "src_path=${src_path}" >> "$GITHUB_OUTPUT"
-      - name: Attach CentOS Stream 8 RPMs to the release
+      - name: Attach AlmaLinux 8 RPMs to the release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.package_name_centos8.outputs.rpm_path }}
-            ${{ steps.package_name_centos8.outputs.src_path }}
+            ${{ steps.package_name_almalinux8.outputs.rpm_path }}
+            ${{ steps.package_name_almalinux8.outputs.src_path }}
 
   release9:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service, glite-BDII_site, glite-BDII_top]
+        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS Stream 9 release artefacts
-    needs: centos9-${{ matrix.rpm-name }}
+    needs: almalinux9
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: rpms9-${{ matrix.rpm-name }}
       - name: Find package name
-        id: package_name_centos9
+        id: package_name_almalinux9
         run: |
           rpm_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el9.noarch.rpm')
           src_path=$(find . -name '${{ matrix.rpm-name }}-*-1.el9.src.rpm')
           echo "rpm_path=${rpm_path}" >> "$GITHUB_OUTPUT"
           echo "src_path=${src_path}" >> "$GITHUB_OUTPUT"
-      - name: Attach CentOS Stream 9 RPMs to the release
+      - name: Attach AlmaLinux 9 RPMs to the release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.package_name_centos9.outputs.rpm_path }}
-            ${{ steps.package_name_centos9.outputs.src_path }}
+            ${{ steps.package_name_almalinux9.outputs.rpm_path }}
+            ${{ steps.package_name_almalinux9.outputs.src_path }}
