--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
   centos7:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} CentOS 7 RPMs
     runs-on: ubuntu-latest
     container: quay.io/centos/centos:7
@@ -28,6 +29,7 @@ jobs:
           yum-builddep -y ${{ matrix.rpm-name }}.spec
       - name: build rpm
         run: |
+          cd ${{ matrix.rpm-name }}
           make clean rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
@@ -40,7 +42,8 @@ jobs:
   almalinux8:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     runs-on: ubuntu-latest
     container: almalinux:8
@@ -55,6 +58,7 @@ jobs:
           yum-builddep -y ${{ matrix.rpm-name }}.spec
       - name: build rpm
         run: |
+          cd ${{ matrix.rpm-name }}
           make clean rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
@@ -67,7 +71,8 @@ jobs:
   almalinux9:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build AlmaLinux 9 RPMs
     runs-on: ubuntu-latest
     container: almalinux:9
@@ -82,6 +87,7 @@ jobs:
           yum-builddep -y ${{ matrix.rpm-name }}.spec
       - name: build rpm
         run: |
+          cd ${{ matrix.rpm-name }}
           make clean rpm
       - name: Upload RPMs
         uses: actions/upload-artifact@v3
@@ -94,7 +100,8 @@ jobs:
   release7:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS 7 release artefacts
     needs: centos7
     runs-on: ubuntu-latest
@@ -122,7 +129,8 @@ jobs:
   release8:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} AlmaLinux 8 release artefacts
     needs: almalinux8
     runs-on: ubuntu-latest
@@ -150,7 +158,8 @@ jobs:
   release9:
     strategy:
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS Stream 9 release artefacts
     needs: almalinux9
     runs-on: ubuntu-latest
