--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: install build requisites
+      - name: Install build requisites
         run: |
           yum install -y rpm-build yum-utils
           cd ${{ matrix.rpm-name }}
           yum-builddep -y ${{ matrix.rpm-name }}.spec
-      - name: build rpm
+      - name: Build rpm
         run: |
           cd ${{ matrix.rpm-name }}
           make clean rpm
@@ -56,7 +56,7 @@ jobs:
           yum install -y rpm-build yum-utils
           cd ${{ matrix.rpm-name }}
           yum-builddep -y ${{ matrix.rpm-name }}.spec
-      - name: build rpm
+      - name: Build rpm
         run: |
           cd ${{ matrix.rpm-name }}
           make clean rpm
@@ -85,7 +85,7 @@ jobs:
           yum install -y rpm-build yum-utils
           cd ${{ matrix.rpm-name }}
           yum-builddep -y ${{ matrix.rpm-name }}.spec
-      - name: build rpm
+      - name: Build rpm
         run: |
           cd ${{ matrix.rpm-name }}
           make clean rpm
