--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} CentOS 7 RPMs
     runs-on: ubuntu-latest
     container: quay.io/centos/centos:7
@@ -41,7 +42,8 @@ jobs:
       fail-fast: false
       matrix:
         almalinux-version: [8, 9]
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Build ${{ matrix.rpm-name }} AlmaLinux ${{ matrix.almalinux-version }} RPMs
     runs-on: ubuntu-latest
     container: almalinux:${{ matrix.almalinux-version }}
@@ -54,7 +56,7 @@ jobs:
           yum install -y rpm-build yum-utils rpmlint
           cd ${{ matrix.rpm-name }}
           yum-builddep -y ${{ matrix.rpm-name }}.spec
-      - name: build rpm
+      - name: Build rpm
         run: |
           cd ${{ matrix.rpm-name }}
           make clean rpm
@@ -70,7 +72,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Install ${{ matrix.rpm-name }} CentOS 7 RPMs
     needs: build-centos7
     runs-on: ubuntu-latest
@@ -93,7 +96,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Install ${{ matrix.rpm-name }} AlmaLinux 8 RPMs
     needs: build
     runs-on: ubuntu-latest
@@ -112,7 +116,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rpm-name: [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
+        rpm-name:
+          [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Install ${{ matrix.rpm-name }} AlmaLinux 9 RPMs
     needs: build
     runs-on: ubuntu-latest
