--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           name: rpms7-${{ matrix.rpm-name }}
           path: |
-            build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el7.noarch.rpm
-            build/SRPMS/${{ matrix.rpm-name }}-*-1.el7.src.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el7.noarch.rpm
+            ${{ matrix.rpm-name }}/build/SRPMS/${{ matrix.rpm-name }}-*-1.el7.src.rpm
 
   almalinux8:
     strategy:
@@ -65,8 +65,8 @@ jobs:
         with:
           name: rpms8-${{ matrix.rpm-name }}
           path: |
-            build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el8.noarch.rpm
-            build/SRPMS/${{ matrix.rpm-name }}-*-1.el8.src.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el8.noarch.rpm
+            ${{ matrix.rpm-name }}/build/SRPMS/${{ matrix.rpm-name }}-*-1.el8.src.rpm
 
   almalinux9:
     strategy:
@@ -94,8 +94,8 @@ jobs:
         with:
           name: rpms9-${{ matrix.rpm-name }}
           path: |
-            build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el9.noarch.rpm
-            build/SRPMS/${{ matrix.rpm-name }}-*-1.el9.src.rpm
+            ${{ matrix.rpm-name }}/build/RPMS/noarch/${{ matrix.rpm-name }}-*-1.el9.noarch.rpm
+            ${{ matrix.rpm-name }}/build/SRPMS/${{ matrix.rpm-name }}-*-1.el9.src.rpm
 
   release7:
     strategy:
