--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,7 +105,7 @@ jobs:
         rpm-name:
           [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} AlmaLinux 8 release artefacts
-    needs: almalinux8
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
@@ -134,7 +134,7 @@ jobs:
         rpm-name:
           [emi-bdii-site, emi-bdii-top, emi-resource-information-service]
     name: Upload ${{ matrix.rpm-name }} CentOS Stream 9 release artefacts
-    needs: almalinux9
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v3
